[package]
name = "visa-rs"
version = "0.6.0"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-rs"
homepage = "https://github.com/TsuITOAR/visa-rs"
keywords = ["control", "visa", "instrument"]
categories = ["api-bindings"]
description = "Safe rust bindings for VISA(Virtual Instrument Software Architecture) library"
exclude = ["/expand.rs", "/fetch-doc"]
readme = "README_Crates_io.MD"

[dependencies]
visa-sys = "^0.1.4"
bitflags = "^2.4"
num_enum = "^0.7"
visa-rs-proc = { version = "^0.5.0", path = "./visa-rs-proc" }
log = "^0.4"

[dev-dependencies]
anyhow = "^1"
tokio = { version = "^1", features = ["rt-multi-thread"] }
env_logger = "^0.10"


[patch.crates-io]
visa-sys = { path = "../visa-sys" }
