[package]
name = "visa-rs"
version = "0.6.2"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-rs"
homepage = "https://github.com/TsuITOAR/visa-rs"
keywords = ["control", "visa", "instrument"]
categories = ["api-bindings"]
description = "Safe rust bindings for VISA(Virtual Instrument Software Architecture) library"
exclude = ["/expand.rs", "/fetch-doc"]
readme = "README_Crates_io.MD"

[features]
default = []
# Enable cross-compilation support with predefined platform configurations
cross-compile = ["visa-rs-proc/cross-compile"]
# Enable custom repr mapping via environment variables
custom-repr = ["visa-rs-proc/custom-repr"]

[dependencies]
visa-sys = { version = "^0.1.7" }
bitflags = "^2.6"
num_enum = "^0.7"
visa-rs-proc = { version = "^0.6.1", path = "./visa-rs-proc" }
log = "^0.4"

[dev-dependencies]
anyhow = "^1"
tokio = { version = "^1", features = ["rt-multi-thread"] }
env_logger = "^0.10"


[patch.crates-io]
#visa-sys = { path = "../visa-sys" }
