[package]
name = "fetch-doc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
scraper = "^0.13"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
serde_json = "^1"
anyhow = "^1"
