[package]
name = "visa-rs-proc"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-sys"
homepage = "https://github.com/TsuITOAR/visa-sys"
description = "procedural macros used in visa-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "^1"
quote = "^1"
proc-macro2 = "^1"
