[package]
name = "visa-rs-proc"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-rs"
homepage = "https://github.com/TsuITOAR/visa-rs"
description = "procedural macros used in visa-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = []
# Enable cross-compilation support using predefined platform configurations
cross-compile = ["serde", "toml"]
# Enable custom repr mapping via environment variables
custom-repr = []

[dependencies]
syn = "^1"
quote = "^1"
proc-macro2 = "^1"
visa-sys = { version = "^0.1.6", features = ["proc"] }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

[patch.crates-io]
#visa-sys = { path = "../../visa-sys" }
