[package]
name = "visa-rs-proc"
version = "0.6.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-rs"
homepage = "https://github.com/TsuITOAR/visa-rs"
description = "procedural macros used in visa-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "^2"
quote = "^1"
proc-macro2 = "^1"
visa-sys = { version = "^0.1.8", features = ["proc"] }

[patch.crates-io]
#visa-sys = { path = "../../visa-sys" }
